--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Environment variables
 .env
-.env.*
+.env.local
 
 # Python
 __pycache__/
@@ -8,7 +8,6 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
 build/
 develop-eggs/
 dist/
@@ -27,6 +26,7 @@ wheels/
 
 # Virtual Environment
 venv/
+env/
 ENV/
 
 # IDE
@@ -35,6 +35,9 @@ ENV/
 *.swp
 *.swo
 
-# Database
-*.db
-*.sqlite3
+# Logs
+*.log
+
+# System Files
+.DS_Store
+Thumbs.db
