--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-Flask==3.0.2
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
+fastapi==0.110.0
+uvicorn==0.27.1
 python-dotenv==1.0.1
-SQLAlchemy==2.0.28
-Werkzeug==3.0.1
-gunicorn==21.2.0
 psycopg2-binary==2.9.9
+fake-useragent==0.1.11
+asyncio>=3.4.3
+typing>=3.7.4
+beautifulsoup4>=4.12.0
+pydantic==2.6.3
+requests==2.31.0
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.23.0
+rapidfuzz>=3.0.0
+redis==5.0.1
+aiohttp==3.9.1
