--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,9 @@
 services:
   - type: web
     name: trackly-server
-    env: docker
-    dockerfilePath: ./Dockerfile
+    env: python
+    buildCommand: pip3 install -r requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
