--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ fake-useragent==0.1.11
 asyncio>=3.4.3
 typing>=3.7.4
 beautifulsoup4>=4.12.0
-pydantic==2.6.3
+pydantic>=2.10.0
 requests==2.31.0
 fuzzywuzzy==0.18.0
 python-Levenshtein==0.23.0
