build: python-Levenshtein update

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ beautifulsoup4>=4.12.0
 pydantic>=2.10.0
 requests==2.31.0
 fuzzywuzzy==0.18.0
-python-Levenshtein==0.23.0
+python-Levenshtein>=0.25.0
 rapidfuzz>=3.0.0
 redis==5.0.1
 aiohttp==3.9.1
